website/websites/u32/code/fannkuchredux.2.v8.log

Fri, 04 Jun 2010 21:37:49 GMT

COMMAND LINE:
/usr/local/src/v8/d8 --nodebugger fannkuchredux.v8-2.v8 -- 10

PROGRAM FAILED 


PROGRAM OUTPUT:
fannkuchredux.v8-2.v8:49: SyntaxError: Unexpected token [
var [checksum,pf] = fannkuch(n);
    ^
